feat: 移除无关文件，更新log与meta

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-cn">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-practice</title>
+    <title>PaceMaster</title>
+    <meta name="description" content="PaceMaster：高效的考试节奏训练与管理工具" />
+    <meta name="keywords" content="PaceMaster, 节奏, 训练, 练习, 记录, 管理" />
+    <meta name="lianglh" content="none" />
   </head>
   <body>
     <div id="root"></div>
